[package]
name = "flv-fix"
version = "0.1.6"
edition = "2024"

[dependencies]
bytes = "1.11.0"
byteorder = "1.5.0"

futures = "0.3.31"
flv = { path = "../flv" }
amf0 = { path = "../amf0" }
pipeline-common = { path = "../pipeline-common" }
crc32fast = "1.4.2"
time = { version = "0.3.44", features = ["macros", "formatting", "parsing"] }
tracing = "0.1.41"
tracing-indicatif = "0.3"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1.48.0", features = [
    "fs",
    "io-util",
    "rt",
    "macros",
    "rt-multi-thread",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
