[package]
name = "flv"
version = "0.1.1"
edition = "2024"

[dependencies]
bytes = "1.11.0"
byteorder = "1.5.0"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt"] }
tokio-util = { version = "0.7.17", features = ["io", "codec"] }
futures = { version = "0.3.31", features = ["std"], default-features = false }
bytes-util = { path = "../bytes-util" }
amf0 = { path = "../amf0" }
av1 = { path = "../av1" }
h264 = { path = "../h264" }
h265 = { path = "../h265" }
thiserror = "2.0.17"
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = "0.3.20"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
