[package]
name = "h264"
version = "0.1.1"
edition = "2024"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
bytes = "1.11.0"
byteorder = "1.5"
expgolomb = { path = "../expgolomb" }
bytes-util = { path = "../bytes-util" }

[dev-dependencies]
insta = "1.43"
