[package]
name = "mesio-engine"
version = "0.1.8"
edition = "2024"
description = "Mesio (media) streaming downloader engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hua0512/rust-srec"

[dependencies]
bytes = "1.11.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "io-util"] }
tokio-util = { version = "0.7.11" }
tokio-stream = "0.1.17"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
    "system-proxy",
    "socks"
] }
url = "2.5"
async-trait = "0.1"
thiserror = "2.0"
m3u8-rs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
humansize = "2.0.0"
rand = "0.9.1"
moka = { version = "0.12", features = ["future"] }
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
hex = "0.4"
clap = { version = "4.5", features = ["derive"], optional = true }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-indicatif = "0.3"
indicatif = "0.18"

# Workspace crates
flv = { path = "../flv" }
hls = { path = "../hls" }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
