[package]
name = "pipeline-common"
version = "0.1.2"
edition = "2024"
description = "Common traits and implementations for media processing pipelines"
license = "MIT"


[dependencies]
thiserror = "2.0"
tracing = "0.1"
tracing-indicatif = "0.3"
time = { version = "0.3.44", features = ["local-offset"] }
tokio = { version = "1.48.0", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7.17" }

[dev-dependencies]
tracing-subscriber = "0.3"
tempfile = "3.23.0"
criterion = "0.7.0"
flume = "0.11.1"
crossbeam-channel = "0.5.10"

[[bench]]
name = "cloning_benchmark"
harness = false

[[bench]]
name = "channel_benchmark"
harness = false


[[bench]]
name = "dispatch_benchmark"
harness = false

[[bench]]
name = "pipeline_benchmark"
harness = false
